Fixed alignment of images

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,6 @@
 .post__content code {
     display: inline-block;
 }
+img {
+    display: inline !important; 
+}
